Next release
------------

- Added a new option, "--login", to use a subscription login when streaming.
- Decompress the database file on download to save some time afterward.
- Config file support.
- Split the "--stream" option into "--stream" that specify whether to stream or not, and "--format" to specify the format.
- Bugfix : download the CRC file only when needed.

0.1
---

- Initial release