@@ -5,6 +5,7 @@ Next release
 - Decompress the database file on download to save some time afterward.
 - Config file support.
 - Split the "--stream" option into "--stream" that specify whether to stream or not, and "--format" to specify the format.
+- Changed the verbose argument and added a quiet argument.
 - Bugfix : download the CRC file only when needed.
 
 0.1
